added functionality to delete reviews and finished chapter 9

--- a/moviesstore/movies/templates/movies/show.html
+++ b/moviesstore/movies/templates/movies/show.html
@@ -25,6 +25,9 @@
             <a class="btn btn-primary"
               href="{% url 'movies.edit_review' id=template_data.movie.id review_id=review.id %}">Edit
             </a>
+            <a class="btn btn-danger"
+              href="{% url 'movies.delete_review' id=template_data.movie.id review_id=review.id %}">Delete
+            </a>
             {% endif %}
           </li>
           {% endfor %}
