--- a/moviesstore/home/templates/home/index.html
+++ b/moviesstore/home/templates/home/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<header class="masthead bg-index text-white text-center py-4">
+<header class="masthead bg-index text-blue text-center py-4">
   <div class="container d-flex align-items-center flex-column pt-2">
     <h2>Movies Store</h2>
     <p>Your Ticket to Unlimited Entertainment!</p>
