Add forgot password feature
Reset email is printed in the console, got errors with using an actual mailing server

--- a/moviesstore/accounts/templates/registration/password_reset_confirm.html
+++ b/moviesstore/accounts/templates/registration/password_reset_confirm.html
@@ -1,4 +1,4 @@
-<!-- signup.html -->
+<!-- registration/password_reset_confirm.html -->
 {% extends 'base.html' %}
 {% block content %}
 <div class="p-3 mt-4">
@@ -7,14 +7,12 @@
       <div class="col-md-8">
         <div class="card shadow p-3 mb-4 rounded">
           <div class="card-body">
-            <h2>Sign Up</h2>
+            <h2>Set New Password</h2>
             <hr />
             <form method="POST">
               {% csrf_token %}
-              {{ template_data.form.as_p }}
-              <button type="submit"
-                class="btn bg-dark text-white">Sign Up
-              </button>
+              {{ form.as_p }}
+              <button type="submit" class="btn bg-dark text-white">Change Password</button>
             </form>
           </div>
         </div>
