--- a/moviesstore/accounts/templates/accounts/login.html
+++ b/moviesstore/accounts/templates/accounts/login.html
@@ -1,3 +1,4 @@
+<!-- login.html -->
 {% extends 'base.html' %}
 {% block content %}
 <div class="p-3 mt-4">
@@ -35,6 +36,9 @@
                 </button>
               </div>
             </form>
+            <div class="text-center mt-3">
+              <a href="{% url 'password_reset' %}">Forgot password?</a>
+            </div>
           </div>
         </div>
       </div>
