--- a/moviesstore/accounts/templates/registration/password_reset_complete.html
+++ b/moviesstore/accounts/templates/registration/password_reset_complete.html
@@ -1,4 +1,4 @@
-<!-- signup.html -->
+<!-- registration/password_reset_complete.html -->
 {% extends 'base.html' %}
 {% block content %}
 <div class="p-3 mt-4">
@@ -7,15 +7,10 @@
       <div class="col-md-8">
         <div class="card shadow p-3 mb-4 rounded">
           <div class="card-body">
-            <h2>Sign Up</h2>
+            <h2>Password Reset Complete</h2>
             <hr />
-            <form method="POST">
-              {% csrf_token %}
-              {{ template_data.form.as_p }}
-              <button type="submit"
-                class="btn bg-dark text-white">Sign Up
-              </button>
-            </form>
+            <p>Your password has been set. You may go ahead and log in now.</p>
+            <a href="{% url 'login' %}" class="btn bg-dark text-white">Login</a>
           </div>
         </div>
       </div>
