--- a/moviesstore/accounts/templates/registration/password_reset_done.html
+++ b/moviesstore/accounts/templates/registration/password_reset_done.html
@@ -1,4 +1,4 @@
-<!-- signup.html -->
+<!-- registration/password_reset_done.html -->
 {% extends 'base.html' %}
 {% block content %}
 <div class="p-3 mt-4">
@@ -7,15 +7,9 @@
       <div class="col-md-8">
         <div class="card shadow p-3 mb-4 rounded">
           <div class="card-body">
-            <h2>Sign Up</h2>
+            <h2>Password Reset Sent</h2>
             <hr />
-            <form method="POST">
-              {% csrf_token %}
-              {{ template_data.form.as_p }}
-              <button type="submit"
-                class="btn bg-dark text-white">Sign Up
-              </button>
-            </form>
+            <p>We've emailed you instructions for setting your password. If an account exists with the email you entered, you should receive them shortly.</p>
           </div>
         </div>
       </div>
